--- a/frontend/projects/forge/src/app/pages/sign-up/sign-up.page.scss
+++ b/frontend/projects/forge/src/app/pages/sign-up/sign-up.page.scss
@@ -46,6 +46,7 @@
   .sign-up-page {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr;
   }
 
   .sign-up-page__hero {
